# o10-comp

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml  main.c  make-insa  o10c.sh  out  out.json  out.txt  test.txt
doc/: ast.puml  end-to-end.md  grammar.md
end-to-end/: .gitignore  test.py
end-to-end/comments/block-comments/: ast.expected.json  main.c
end-to-end/comments/directive-comments/: ast.expected.json  main.c
end-to-end/comments/invalid-directive-comment/: main.c  test.json
end-to-end/comments/line-comments/: ast.expected.json  main.c
end-to-end/empty-main/: main.c
end-to-end/expression/: ast.actual.json  ast.expected.json  main.c
end-to-end/expression-statement/: main.c
end-to-end/expressions/logical-expressions/: ast.expected.json  test.json
end-to-end/expressions/logical-operations/: ast.expected.json  main.c
end-to-end/expressions/precedence/: ast.expected.json
end-to-end/expressions/priorities/: ast.expected.json  main.c
end-to-end/for-statement/: ast.expected.json  main.c
end-to-end/function-declaration/: ast.expected.json  main.c  test.json
end-to-end/function-definition/: main.c
end-to-end/function-redefinition/: main.c  test.json
end-to-end/globals/: test.json
end-to-end/if-statement/: main.c
end-to-end/integer-declaration/: ast.expected.json  main.c  test.json
end-to-end/null-statement/: ast.expected.json  test.json
end-to-end/program-symbols/function-declaration/: ast.expected.json
end-to-end/program-symbols/function-definition/: ast.expected.json
end-to-end/program-symbols/function-redeclaration/: main.c  test.json
end-to-end/program-symbols/globals/: main.c
end-to-end/program-symbols/integer-declaration/: ast.expected.json
end-to-end/program-symbols/variable-declaration/: ast.expected.json  main.c
end-to-end/programs/alphabet/: ast.expected.json  main.c
end-to-end/programs/array-parameter/: ast.expected.json  main.c
end-to-end/programs/arrays/: main.c  test.json
end-to-end/programs/discriminant/: ast.expected.json  main.c  test.json
end-to-end/programs/empty-main/: ast.expected.json  test.json
end-to-end/programs/empty-program/: ast.expected.json
end-to-end/programs/functions/: ast.expected.json  main.c  test.json
end-to-end/programs/putchar/: ast.expected.json  main.c  run.expected.stdout  test.json
end-to-end/return-statement/: ast.expected.json  main.c
end-to-end/statements/expression-statement/: ast.expected.json
end-to-end/statements/if-statement/: ast.expected.json  main.c  test.json
end-to-end/statements/null-statement/: ast.expected.json  main.c
end-to-end/statements/return-statement/: ast.expected.json
end-to-end/statements/while-statement/: ast.expected.json  main.c
end-to-end/variable-declaration/: ast.expected.json
include/comp/: ast.h  eval.h  exceptions.h  parser.h  utils.h
include/comp/as/: ast.h  emit.h
include/comp/ast/: array_data_type.h  array_declarator.h  array_type.h  assignment_expression.h  binary_expression.h  block_statement.h  call_expression.h  conditional_expression.h  ctype.h  data_type.h  declaration.h  declarator.h  expression.h  expression_statement.h  for_statement.h  function.h  function_declaration.h  identifier.h  identifier_data_type.h  identifier_declarator.h  if_statement.h  int64_literal.h  literal.h  literal_data_type.h  literal_type.h  logical_expression.h  node.h  null_statement.h  parameter.h  position.h  program.h  return_statement.h  statement.h  subscript_expression.h  to_json.h  traverse.h  type.h  uint8_literal.h  unary_expression.h  variable_declaration.h  (+2 more)
include/comp/dot/: ast.h  emit.h
include/comp/ir/: basic_block.h  build_ir.h  builtins.h  context.h  control_flow_graph.h  data_type.h  function.h  op.h  op_grah.h  parameter.h  program.h  program_symbol.h  symbol_table.h  to_dot.h  type.h  value.h  variable.h
include/comp/parser/: parser_config.h
include/comp/utils/: exceptions.h
src/lib/: CMakeLists.txt  ast.cpp  eval.cpp  exceptions.cpp  lexer.l  parser.yy
src/lib/as/: CMakeLists.txt  emit.cpp
src/lib/as/arch/: block_table.cpp  variables_table.cpp
src/lib/as/arch/x64/: build_asm.cpp  stddef.cpp
src/lib/as/ast/: address_expression.cpp  address_operand.cpp  align_directive.cpp  asciz_directive.cpp  big_integer_literal.cpp  binary_expression.cpp  cfi_def_cfa_offset_directive.cpp  cfi_endproc_directive.cpp  cfi_offset_directive.cpp  cfi_startproc_directive.cpp  current_address.cpp  directive.cpp  empty_statement.cpp  expression.cpp  global_directive.cpp  global_symbol.cpp  immediate_operand.cpp  instruction.cpp  integer_literal.cpp  literal.cpp  local_symbol.cpp  logical_expression.cpp  memory_reference.cpp  mnemonic.cpp  node.cpp  operand.cpp  program.cpp  quad_directive.cpp  register_operand.cpp  simple_operand.cpp  size_directive.cpp  statement.cpp  symbol.cpp  text_directive.cpp  type_directive.cpp
src/lib/as/backend/x64/: build_asm.cpp
src/lib/ast/: CMakeLists.txt  array_data_type.cpp  array_declarator.cpp  array_type.cpp  assignment_expression.cpp  binary_expression.cpp  block_statement.cpp  call_expression.cpp  conditional_expression.cpp  data_type.cpp  declaration.cpp  declarator.cpp  expression.cpp  expression_statement.cpp  for_statement.cpp  function.cpp  identifier.cpp  identifier_data_type.cpp  identifier_declarator.cpp  if_statement.cpp  int64_literal.cpp  literal.cpp  literal_data_type.cpp  literal_type.cpp  logical_expression.cpp  node.cpp  null_statement.cpp  parameter.cpp  position.cpp  program.cpp  return_statement.cpp  statement.cpp  subscript_expression.cpp  to_json.cpp  type.cpp  uint8_literal.cpp  unary_expression.cpp  variable_declaration.cpp  variable_declarator.cpp  while_statement.cpp
src/lib/backend/: CMakeLists.txt
src/lib/dot/: CMakeLists.txt  emit.cpp
src/lib/flex/: CMakeLists.txt  flex.cpp  lexer.l  parser.y  scanner.l
src/lib/parser/: CMakeLists.txt  lexer.l  parser.cpp  parser.y
src/main/: error_handling.cpp  error_handling.h  main.cpp
src/test/: ast.spec.cpp  parser.spec.cpp
test/: variableDeclaration.txt
(+304 files in other folders)
