add_library(
  ast STATIC
  array_data_type.cpp
  array_declarator.cpp
  assignment_expression.cpp
  binary_expression.cpp
  block_statement.cpp
  call_expression.cpp
  data_type.cpp
  declaration.cpp
  declarator.cpp
  expression.cpp
  expression_statement.cpp
  for_statement.cpp
  function.cpp
  identifier.cpp
  identifier_declarator.cpp
  if_statement.cpp
  int64_literal.cpp
  literal.cpp
  literal_data_type.cpp
  node.cpp
  null_statement.cpp
  parameter.cpp
  position.cpp
  program.cpp
  return_statement.cpp
  statement.cpp
  subscript_expression.cpp
  to_json.cpp
  uint8_literal.cpp
  unary_expression.cpp
  variable_declaration.cpp
  variable_declarator.cpp
  while_statement.cpp
)
