find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)

BISON_TARGET(PARSER ${CMAKE_CURRENT_SOURCE_DIR}/parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp
  DEFINES_FILE "${CMAKE_CURRENT_BINARY_DIR}/parser.tab.h")
FLEX_TARGET(SCANNER ${CMAKE_CURRENT_SOURCE_DIR}/scanner.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp)
ADD_FLEX_BISON_DEPENDENCY(SCANNER PARSER)

add_library(flex STATIC ${BISON_PARSER_OUTPUTS} ${FLEX_SCANNER_OUTPUTS})
target_link_libraries(flex ast)
