find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)

BISON_TARGET(PARSER ${CMAKE_CURRENT_SOURCE_DIR}/parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cpp
  DEFINES_FILE "${CMAKE_CURRENT_BINARY_DIR}/parser.tab.h")
FLEX_TARGET(SCANNER ${CMAKE_CURRENT_SOURCE_DIR}/lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.yy.cpp
  DEFINES_FILE "${CMAKE_CURRENT_BINARY_DIR}/lexer.yy.h")
ADD_FLEX_BISON_DEPENDENCY(SCANNER PARSER)

include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_library(parser STATIC ${BISON_PARSER_OUTPUTS} ${FLEX_SCANNER_OUTPUTS} parser.cpp)
target_link_libraries(parser ast)
